cmss/main/default/objects/ContactInformation__c/ContactInformation__c.object-meta.xml
<CustomObject>
    <description>An object to store contact information about clients/prospects/leads/agents/assets</description>
    <label>Contact Information</label>
    <nameField>
        <displayFormat>CI-{0000000000}</displayFormat>
        <label>Contact Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>