cmss/main/default/objects/ContactInformation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference na klienta, kterému patří kontaktní informace</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Information</relationshipLabel>
    <relationshipName>ContactInformation</relationshipName>
    <type>Lookup</type>
</CustomField>