cmss/main/default/objects/ContactInformation__c/fields/AdditionalAddressLine__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAddressLine__c</fullName>
    <description>Doplňující řádek adresy</description>
    <label>Additional Address Line</label>
    <length>60</length>
    <type>Text</type>
</CustomField>