cmss/main/default/objects/ContactInformation__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference na smlouvu, ke které kontakt patří</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Contact Information</relationshipLabel>
    <relationshipName>ContactInformation</relationshipName>
    <type>Lookup</type>
</CustomField>