cmss/main/default/objects/ContactInformation__c/fields/BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumber__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>