cmss/main/default/objects/ContactInformation__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>