cmss/main/default/objects/ContactInformation__c/fields/ClientZoneID__c.field-meta.xml
<CustomField>
    <fullName>ClientZoneID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Zone ID</label>
    <referenceTo>ClientZone__c</referenceTo>
    <relationshipLabel>Contact Information</relationshipLabel>
    <relationshipName>ContactInformation</relationshipName>
    <type>Lookup</type>
</CustomField>