cmss/main/default/objects/ContactInformation__c/fields/ConfirmEmail__c.field-meta.xml
<CustomField>
    <fullName>ConfirmEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Email</label>
    <type>Checkbox</type>
</CustomField>