cmss/main/default/objects/ContactInformation__c/fields/ConfirmPhonenumber__c.field-meta.xml
<CustomField>
    <fullName>ConfirmPhonenumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Phonenumber</label>
    <type>Checkbox</type>
</CustomField>