cmss/main/default/objects/ContactInformation__c/fields/CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CreateDate__c</fullName>
    <description>Datum vytvoření kontaktu</description>
    <label>Create Date</label>
    <type>DateTime</type>
</CustomField>