cmss/main/default/objects/ContactInformation__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Fax</label>
    <length>40</length>
    <type>Text</type>
</CustomField>