cmss/main/default/objects/ContactInformation__c/fields/FullAddress__c.field-meta.xml
<CustomField>
    <fullName>FullAddress__c</fullName>
    <description>Formula to show the full address in the read only form</description>
    <formula>IF( ISBLANK( StreetAndHouseNumber__c ), &#39;&#39;, StreetAndHouseNumber__c &amp; BR() ) &amp; 
IF( ISBLANK( AdditionalAddressLine__c ), &#39;&#39;, AdditionalAddressLine__c &amp; BR() ) &amp;
IF( ISBLANK( PostalCode__c ), &#39;&#39;, PostalCode__c &amp; &#39; &#39; ) &amp;
IF( ISBLANK( City__c ), BR() , City__c &amp; BR() ) &amp;
IF( ISBLANK( TEXT( Country__c ) ), &#39;&#39;, TEXT( Country__c ) )</formula>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>