cmss/main/default/objects/ContactInformation__c/fields/FullAddressEforms__c.field-meta.xml
<CustomField>
    <fullName>FullAddressEforms__c</fullName>
    <formula>IF( ISBLANK( StreetAndHouseNumber__c ),&quot;&quot; , StreetAndHouseNumber__c &amp; &quot;, &quot; &amp;
IF( ISBLANK( AdditionalAddressLine__c ), &quot;&quot;, AdditionalAddressLine__c &amp; &quot;, &quot; ) &amp;
IF( ISBLANK( PostalCode__c ), &quot;&quot;, PostalCode__c &amp; &quot;, &quot; ) 
 )</formula>
    <label>FullAddressEforms</label>
    <type>Text</type>
</CustomField>