cmss/main/default/objects/ContactInformation__c/fields/HouseNumber__c.field-meta.xml
<CustomField>
    <fullName>HouseNumber__c</fullName>
    <description>Č. p. / Č. o.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>House Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>