cmss/main/default/objects/ContactInformation__c/fields/IsMain__c.field-meta.xml
<CustomField>
    <fullName>IsMain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hlavní kontakt daného typu (telefon, email, adresa)</description>
    <label>Main</label>
    <type>Checkbox</type>
</CustomField>