cmss/main/default/objects/ContactInformation__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference na lead, kterému patří kontaktní informace</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Contact Information</relationshipLabel>
    <relationshipName>ContactInformation</relationshipName>
    <type>Lookup</type>
</CustomField>