cmss/main/default/objects/ContactInformation__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <description>Telefónní číslo</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>