cmss/main/default/objects/ContactInformation__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>PSČ</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>