cmss/main/default/objects/ContactInformation__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority</label>
    <type>Checkbox</type>
</CustomField>