cmss/main/default/objects/ContactInformation__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Ulice</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>