cmss/main/default/objects/ContactInformation__c/fields/StreetAndHouseNumber__c.field-meta.xml
<CustomField>
    <fullName>StreetAndHouseNumber__c</fullName>
    <description>Combination of Street and House Number</description>
    <formula>IF( NOT( OR( ISBLANK( Street__c ), ISBLANK( HouseNumber__c ) ) ), 
     Street__c + &#39; &#39; + HouseNumber__c,
     IF( NOT( ISBLANK( Street__c )), 
         Street__c,
         IF( NOT( ISBLANK(  HouseNumber__c )),
             HouseNumber__c,
             &#39;&#39;
         )
     )
 )</formula>
    <label>Street and House Number</label>
    <type>Text</type>
</CustomField>