cmss/main/default/objects/ContactInformation__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10001</fullName>
            </value>
            <value>
                <fullName>100010</fullName>
            </value>
            <value>
                <fullName>100012</fullName>
            </value>
            <value>
                <fullName>100014</fullName>
            </value>
            <value>
                <fullName>100015</fullName>
            </value>
            <value>
                <fullName>100016</fullName>
            </value>
            <value>
                <fullName>100017</fullName>
            </value>
            <value>
                <fullName>10002</fullName>
            </value>
            <value>
                <fullName>10003</fullName>
            </value>
            <value>
                <fullName>10004</fullName>
            </value>
            <value>
                <fullName>10005</fullName>
            </value>
            <value>
                <fullName>10007</fullName>
            </value>
            <value>
                <fullName>10008</fullName>
            </value>
            <value>
                <fullName>10009</fullName>
            </value>
            <value>
                <fullName>20001</fullName>
            </value>
            <value>
                <fullName>200010</fullName>
            </value>
            <value>
                <fullName>200011</fullName>
            </value>
            <value>
                <fullName>200012</fullName>
            </value>
            <value>
                <fullName>20002</fullName>
            </value>
            <value>
                <fullName>200020</fullName>
            </value>
            <value>
                <fullName>200021</fullName>
            </value>
            <value>
                <fullName>200022</fullName>
            </value>
            <value>
                <fullName>200023</fullName>
            </value>
            <value>
                <fullName>200024</fullName>
            </value>
            <value>
                <fullName>200025</fullName>
            </value>
            <value>
                <fullName>200026</fullName>
            </value>
            <value>
                <fullName>200027</fullName>
            </value>
            <value>
                <fullName>200030</fullName>
            </value>
            <value>
                <fullName>20004</fullName>
            </value>
            <value>
                <fullName>200051</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>