cmss/main/default/objects/ContactInformation__c/fields/TechnicalStatus__c.field-meta.xml
<CustomField>
    <fullName>TechnicalStatus__c</fullName>
    <label>Technical Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>