cmss/main/default/objects/ContactInformation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Typ kontaktní informace (domáci telefon, hlavni telefon, mobil, další telefon, hlavni email, další email, trvalá adresa, kontaktní adresa, přechodní adresa, sídlo, …..) - potřeba ješte dořešit číselník a updatnout hodnoty</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10001</fullName>
            </value>
            <value>
                <fullName>10002</fullName>
            </value>
            <value>
                <fullName>10003</fullName>
            </value>
            <value>
                <fullName>10004</fullName>
            </value>
            <value>
                <fullName>10005</fullName>
            </value>
            <value>
                <fullName>10007</fullName>
            </value>
            <value>
                <fullName>10008</fullName>
            </value>
            <value>
                <fullName>10009</fullName>
            </value>
            <value>
                <fullName>100010</fullName>
            </value>
            <value>
                <fullName>100012</fullName>
            </value>
            <value>
                <fullName>100014</fullName>
            </value>
            <value>
                <fullName>100015</fullName>
            </value>
            <value>
                <fullName>20004</fullName>
            </value>
            <value>
                <fullName>200012</fullName>
            </value>
            <value>
                <fullName>200054</fullName>
            </value>
            <value>
                <fullName>20001</fullName>
            </value>
            <value>
                <fullName>20002</fullName>
            </value>
            <value>
                <fullName>20007</fullName>
            </value>
            <value>
                <fullName>20008</fullName>
            </value>
            <value>
                <fullName>200081</fullName>
            </value>
            <value>
                <fullName>200082</fullName>
            </value>
            <value>
                <fullName>200088</fullName>
            </value>
            <value>
                <fullName>200010</fullName>
            </value>
            <value>
                <fullName>200011</fullName>
            </value>
            <value>
                <fullName>200020</fullName>
            </value>
            <value>
                <fullName>200021</fullName>
            </value>
            <value>
                <fullName>200022</fullName>
            </value>
            <value>
                <fullName>200023</fullName>
            </value>
            <value>
                <fullName>200024</fullName>
            </value>
            <value>
                <fullName>200025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>