cmss/main/default/objects/ContactInformation__c/fields/UpdateDate__c.field-meta.xml
<CustomField>
    <fullName>UpdateDate__c</fullName>
    <description>Datum aktualizace</description>
    <label>Update Date</label>
    <type>DateTime</type>
</CustomField>