cmss/main/default/objects/ContactInformation__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference na uživatele, kterému patří kontaktní informace</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContactInformation</relationshipName>
    <type>Lookup</type>
</CustomField>