cmss/main/default/objects/ContactInformation__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>Platnost do</description>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>