cmss/main/default/objects/ContactInformation__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Shows values from fields Phone, Address, Email or Data Box Number based on the picklist value in field Type__c.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>